--- a/style.css
+++ b/style.css
@@ -241,16 +241,28 @@ h3 {
   gap: 10px;
   margin: 30px auto;
   perspective: 800px;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .keyboard-row {
   display: flex;
+  flex-wrap: wrap; /* important for small screens */
+  justify-content: center;
   gap: 10px;
+
 }
 
 .key {
-  width: 50px;
-  height: 50px;
+  width: 8vw; 
+  min-width: 30px;
+  max-width: 60px;
+
+  height: 8vw;
+  min-height: 30px;
+  max-height: 60px;
   background: linear-gradient(135deg, #0b0b0b, #0f0134); 
   border-radius: 8px;
   color: white;
